@@ -99,19 +99,21 @@ typedef const struct OpaqueWKBundlePageOverlay* WKBundlePageOverlayRef;
 typedef const struct OpaqueWKBundleRangeHandle* WKBundleRangeHandleRef;
 typedef const struct OpaqueWKBundleScriptWorld* WKBundleScriptWorldRef;
 
+/* These rules should stay the same as in JavaScriptCore/API/JSBase.h */
+
 #undef WK_EXPORT
 #if defined(WK_NO_EXPORT)
 #define WK_EXPORT
-#elif defined(__GNUC__) && !defined(__ARMCC__)
+#elif defined(__GNUC__) && !defined(__CC_ARM) && !defined(__ARMCC__)
 #define WK_EXPORT __attribute__((visibility("default")))
-#elif defined(WIN32) || defined(_WIN32) || defined(__ARMCC__)
+#elif defined(WIN32) || defined(_WIN32) || defined(_WIN32_WCE) || defined(__CC_ARM) || defined(__ARMCC__)
 #if BUILDING_WEBKIT
 #define WK_EXPORT __declspec(dllexport)
 #else
 #define WK_EXPORT __declspec(dllimport)
 #endif
-#else
+#else /* !defined(WK_NO_EXPORT) */
 #define WK_EXPORT
-#endif
+#endif /* defined(WK_NO_EXPORT) */
 
 #endif /* WKBase_h */
